# ai-research-assistant-platform

./: .bandit  .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FUTURE_SCOPE.md  LICENSE  Makefile  README.md  api_contract_report.json  bandit-report.json  docker-compose.yml  env.example  main.py  mypy.ini  package.json  pylock.toml  pyproject.toml  ruff.toml  start-dev.sh  start.sh  test-apis.sh
.github/: dependabot.yml
.github/workflows/: api-contract-validation.yml  ci.yml  dependency-update.yml  pr-pipeline.yml  release-pipeline.yml  security-scan.yml
app/: __init__.py  auth.py  exceptions.py  payment.py  responses.py  utils.py
app/api/: __init__.py  auth.py  chat.py  health.py  monitoring.py  payment.py  research.py
app/apis/monitor/: __init__.py  health.py  metrics.py  response.py  root.py
app/apis/v1/: __init__.py
app/core/: config.py  database.py  lifespan.py  logging_utils.py  server.py  utils.py
app/core/cache/: cache.py
app/core/exceptions/: __init__.py  base.py  handle_exception.py
app/core/middlewares/: logging.py  rate_limiter.py
app/core/responses/: json_response.py  stream_response.py
app/middleware/: api_monitoring.py  endpoint_validation.py
app/models/: __init__.py  models.py  user.py  user_db.py
app/services/: auth.py  payment.py
app/tasks/chat/: summary_task.py
docs/: CONTRIBUTING.md  business-plan.md  cache.md  ci-cd.md  envs.md  example.env  local_model_setup.md  rate_limit.md  research-platform-readme.md
frontend/: .eslintrc.js  Dockerfile  README.md  jest.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css  setupTests.js
frontend/src/__mocks__/: axios.js
frontend/src/__tests__/: App.test.js  Layout.test.js  Login.test.js
frontend/src/components/: Dashboard.tsx  Layout.js  Layout.tsx  (+3 more)
scripts/: validate_api_contracts.py
tests/: conftest.py  test_api.py  test_api_contract.py  test_chat.py  test_local_model_client.py  test_research.py  test_user.py  test_websearch_executor.py
(+50 files in other folders)
